# DataGathering

./: .gitignore  README.md  config.yaml  pyproject.toml
src/datagather/: __init__.py  cli.py  config.py  orchestrator.py
src/datagather/sources/: __init__.py  arxiv.py  async_arxiv.py  async_gutenberg.py  async_wikipedia.py  base.py  code.py  conversational.py  gutenberg.py  legal.py  news.py  recipes.py  reddit.py  reviews.py  stackoverflow.py  subtitles.py  twitter.py  wikipedia.py
src/datagather/storage/: __init__.py  checkpoint.py  jsonl.py
src/datagather/utils/: __init__.py  async_rate_limit.py  async_retry.py  chunking.py  rate_limit.py  retry.py  text.py
tests/: __init__.py
