[project]
name = "datagather"
version = "0.1.0"
description = "Gather diverse English text data from open sources for LLM anisotropy studies"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rami Luisto" }
]
requires-python = ">=3.10"
keywords = ["nlp", "text-data", "web-scraping", "llm", "embedding", "anisotropy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

dependencies = [
    # CLI Framework
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",

    # Data Sources
    "wikipedia-api>=0.7.1",
    "requests>=2.31.0",
    "datasets>=2.16.0",
    "arxiv>=2.1.0",
    "zstandard>=0.22.0",

    # Storage
    "orjson>=3.9.0",
    "pyarrow>=14.0.0",

    # HTTP & Networking
    "httpx>=0.26.0",
    "tenacity>=8.2.0",

    # Progress & UX
    "tqdm>=4.66.0",

    # Text Processing
    "tiktoken>=0.5.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
news = [
    "news-please>=1.6.0",
]
conversational = [
    "convokit>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
all = [
    "datagather[news,conversational,dev]",
]

[project.scripts]
datagather = "datagather.cli:app"

[project.urls]
Homepage = "https://github.com/ramiluisto/DataGathering"
Repository = "https://github.com/ramiluisto/DataGathering"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datagather"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["datagather"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
